--- a/AspnetCore/BooksApi/BooksApi.csproj
+++ b/AspnetCore/BooksApi/BooksApi.csproj
@@ -8,6 +8,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.9.3" />
   </ItemGroup>
 
