Test the concurrency of editing pages, as well as deleting pages

--- a/AspnetCore/RazorPagesSchool/appsettings.json
+++ b/AspnetCore/RazorPagesSchool/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings":{
-      "SchoolContext":"Data Source=.;Initial Catalog=School;uid=sa;pwd=123456;"
+      "SchoolContext":"Data Source=192.168.0.106;Initial Catalog=School;uid=sa;pwd=123456;"
   }
 }
