--- a/AspnetCore/AspnetCoreStudy/AspnetCoreStudy.csproj
+++ b/AspnetCore/AspnetCoreStudy/AspnetCoreStudy.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.Authentication.WeChat" Version="2.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
   </ItemGroup>
 
