--- a/AspnetCore/BooksApi/BooksApi.csproj
+++ b/AspnetCore/BooksApi/BooksApi.csproj
@@ -7,6 +7,7 @@
 	<ItemGroup>
 	</ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="Dapper" Version="2.0.30" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
 		<PackageReference Include="MongoDB.Driver" Version="2.9.3" />
