add the reference of RabbitMQ.Client to the project name of BooksAPi,and the content into the file name of url.txt

--- a/AspnetCore/BooksApi/BooksApi.csproj
+++ b/AspnetCore/BooksApi/BooksApi.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
 		<PackageReference Include="MongoDB.Driver" Version="2.9.3" />
+		<PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc5" />
 	</ItemGroup>
 </Project>
