config network information

--- a/AspnetCore/BooksApi/appsettings.json
+++ b/AspnetCore/BooksApi/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Consul": {
+    "IP": "192.168.110.130",
+    "Port": 8500
+  },
+  "Service": {
+    "Name": "CAS.NB.ClientService",
+    "Port": "8810"
+  },
   "BookstoreDatabaseSettings": {
     "BooksCollectionName": "Books",
     "ConnectinString": "mongodb://localhost:27017",
