add repository,entity,application,and extension project

--- a/AspnetCore/OnlineOrdering/ZeroOne.Repository/ZeroOne.Repository.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.Repository/ZeroOne.Repository.csproj
@@ -1,5 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\ZeroOne.Entity\ZeroOne.Entity.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="sqlSugarCore" Version="5.0.0.11" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
