--- a/AspnetCore/OnlineOrdering/ZeroOne.Entity/ZeroOne.Entity.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.Entity/ZeroOne.Entity.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="sqlSugarCore" Version="5.0.0.11" />
+  </ItemGroup>
+
 </Project>
