创建仓储基础类

--- a/AspnetCore/OnlineOrdering/ZeroOne.Repository/ZeroOne.Repository.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.Repository/ZeroOne.Repository.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ZeroOne.Entity\ZeroOne.Entity.csproj" />
+    <ProjectReference Include="..\ZeroOne.Extension\ZeroOne.Extension.csproj" />
   </ItemGroup>
 
   <ItemGroup>
