--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/Properties/launchSettings.json
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/Properties/launchSettings.json
@@ -20,8 +20,8 @@
     "ZeroOne.WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "http://localhost:5000/api/proinfo",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
