--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionConfig": {
     "DbType": 0, //0:MySql,1:SqlServer,2:Sqlite,3:Oracle,4:PostgreSQL
-    "ConnectionString": "Data Source=localhost;port=3306;user id=root;password=Yyw&1314;Initial Catalog=onlineordering;convertzerodatetime=True;AutoEnlist=false;Charset=utf8;Connection Timeout=30",
+    "ConnectionString": "Data Source=localhost;port=3306;user id=root;password=123456;Initial Catalog=onlineordering;convertzerodatetime=True;AutoEnlist=false;Charset=utf8;Connection Timeout=30",
     "IsAutoCloseConnection": true
   }
 }
