--- a/AspnetCore/OnlineOrdering/ZeroOne.Entity/ZeroOne.Entity.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.Entity/ZeroOne.Entity.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
