--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
@@ -11,5 +11,10 @@
     "DbType": 0, //0:MySql,1:SqlServer,2:Sqlite,3:Oracle,4:PostgreSQL
     "ConnectionString": "Data Source=localhost;port=3306;user id=root;password=123456;Initial Catalog=onlineordering;convertzerodatetime=True;AutoEnlist=false;Charset=utf8;Connection Timeout=30",
     "IsAutoCloseConnection": true
+  },
+  "JwtSettings": {
+    "Issuer": "https://localhost:44336",
+    "Audience": "https://localhost:44336",
+    "SecretKey": "5E9B1DFB4152415BAC6FF4CA6EEA42D9"
   }
 }
