--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/ZeroOne.WebApi.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/ZeroOne.WebApi.csproj
@@ -17,6 +17,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="NLog" Version="4.6.8" />
+    <PackageReference Include="NLog.Mongo" Version="4.6.0.68" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
+    <PackageReference Include="NLog.WindowsIdentity" Version="4.6.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc5" />
   </ItemGroup>
 
