添加身份验证失败处理代码

--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/nlog.Development.config
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/nlog.Development.config
@@ -2,13 +2,12 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      throwConfigExceptions="fasle"
-      internalLogLevel="info"
-      internalLogFile="">
+      throwConfigExceptions="true"
+      internalLogLevel="info">
 
   <!-- enable mongodb layout renderers -->
   <extensions>
-    <add assembly="NLog.WindowsIdentity" />
+    <add assembly="NLog.Web.AspNetCore"/>
     <add assembly="NLog.Mongo" />
   </extensions>
   
@@ -19,14 +18,28 @@
             layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 
    <!--write logs to mongodb-->
-    <target xsi:type="Mongo" name="mongo" databaseName="OnlineOrdering" collectionNames="Logs" connectionString="mongodb://localhost:27017" IncludeDefaults="false">
-      <Field name="Date" layout="${date:format=yyyy-MM-dd HH:mm:ss}" />
-      <Field name="Level" layout="${level}" />
-      <Field name="Logger" layout="${logger}" />
-      <Field name="Message" layout="${message}" />
-      <Field name="Exception" layout="${exception:format=tostring}" />
-      <Field name="CallSite" layout = "${callsite:filename=true}" />
-      <Field name="StackTrace" layout="${stacktrace}" />
+    <!--<target xsi:type="Mongo" name="mongo" databaseName="OnlineOrdering" collectionNames="Logs" connectionString="mongodb://localhost:27017/OnlineOrdering" IncludeDefaults="false">
+      <property name="Date" layout="${date:format=yyyy-MM-dd HH:mm:ss}" />
+      <property name="Level" layout="${level}" />
+      <property name="Logger" layout="${logger}" />
+      <property name="Message" layout="${message}" />
+      <property name="Exception" layout="${exception:format=tostring}" />
+      <property name="CallSite" layout = "${callsite:filename=true}" />
+      <property name="StackTrace" layout="${stacktrace}" />
+    </target>-->
+    <target xsi:type="Mongo"
+            name="mongo" databaseName="OnlineOrdering"
+            collectionName="Logs"
+            connectionString="mongodb://localhost:27017/OnlineOrdering"
+            cappedCollectionSize="26214400">
+      <property name="LongDate" layout="${longdate}" bsonType="DateTime" />
+      <property name="Level" layout="${level}" />
+      <property name="Logger" layout="${logger}"/>
+      <property name="Message" layout="${message}" />
+      <property name="Exception" layout="${exception:format=tostring}" />
+      <property name="Url" layout="${aspnet-request-url}" />
+      <property name="Action" layout="${aspnet-mvc-action}" />
+      <property name="UserName" layout="${windows-identity}" />
     </target>
   </targets>
 
