update model name

--- a/AspnetCore/OnlineOrdering/ZeroOne.Extension/ZeroOne.Extension.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.Extension/ZeroOne.Extension.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="WX\" />
+    <Compile Remove="WX\**" />
+    <EmbeddedResource Remove="WX\**" />
+    <None Remove="WX\**" />
   </ItemGroup>
 
 </Project>
