--- a/AspnetCore/OnlineOrdering/ZeroOne.Entity/ZeroOne.Entity.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.Entity/ZeroOne.Entity.csproj
@@ -7,5 +7,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\SqlSugar\SqlSugar.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
 
 </Project>
