--- a/Vue/onlineordermanage/package.json
+++ b/Vue/onlineordermanage/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
