--- a/AspnetCore/OnlineOrdering/ZeroOne.Extension/ZeroOne.Extension.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.Extension/ZeroOne.Extension.csproj
@@ -1,13 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="WX\**" />
     <EmbeddedResource Remove="WX\**" />
     <None Remove="WX\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.3" />
   </ItemGroup>
 
 </Project>
