--- a/AspnetCore/OnlineOrdering/ZeroOne.Repository/ZeroOne.Repository.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.Repository/ZeroOne.Repository.csproj
@@ -7,7 +7,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
 </Project>
