--- a/AspnetCore/OnlineOrdering/ZeroOne.Application/ZeroOne.Application.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.Application/ZeroOne.Application.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
