--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionConfig": {
-     /* 0:MySql,1:SqlServer,2:Sqlite,3:Oracle,4:PostgreSQL */
+    /* 0:MySql,1:SqlServer,2:Sqlite,3:Oracle,4:PostgreSQL */
     "DbType": 0,
     "ConnectionString": "Data Source=localhost;port=3306;user id=root;password=123456;Initial Catalog=onlineordering;convertzerodatetime=True;AutoEnlist=false;Charset=utf8;Connection Timeout=30",
     "IsAutoCloseConnection": true
@@ -18,5 +18,11 @@
     "Audience": "https://localhost:44336",
     "SecretKey": "5E9B1DFB4152415BAC6FF4CA6EEA42D9",
     "ExpireSecond": 7200
+  },
+  "UploadSettings": {
+    //图片原始保存地址
+    "SourceImgRootPath": "/Upload/Images/Source/",
+    //缩略图保存地址
+    "ThumbnailImgRootPath": "/Upload/Images/Thumbnail/"
   }
 }
