图片上传管理

--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
@@ -21,8 +21,8 @@
   },
   "UploadSettings": {
     //图片原始保存地址
-    "SourceImgRootPath": "/Upload/Images/Source/",
+    "SourceImgRootPath": "/Images/Source/",
     //缩略图保存地址
-    "ThumbnailImgRootPath": "/Upload/Images/Thumbnail/"
+    "ThumbnailImgRootPath": "/Images/Thumbnail/"
   }
 }
