--- a/Vue/onlineordermanage/package.json
+++ b/Vue/onlineordermanage/package.json
@@ -12,6 +12,7 @@
     "element-ui": "^2.13.0",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.6",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
