修改产品图片上传

--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/Properties/launchSettings.json
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "ZeroOne.WebApi": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "http://localhost:5002/api/proinfo",
       "applicationUrl": "http://localhost:5002",
       "environmentVariables": {
