--- a/Vue/onlineordermanage/package.json
+++ b/Vue/onlineordermanage/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "vue": "^2.6.11",
+    "vue-hover-mask": "^1.0.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.2"
