--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
@@ -10,7 +10,7 @@
   "ConnectionConfig": {
     /* 0:MySql,1:SqlServer,2:Sqlite,3:Oracle,4:PostgreSQL */
     "DbType": 0,
-    "ConnectionString": "Data Source=localhost;port=3306;user id=root;password=123456;Initial Catalog=onlineordering;convertzerodatetime=True;AutoEnlist=false;Charset=utf8;Connection Timeout=30",
+    "ConnectionString": "Data Source=localhost;port=3306;user id=root;password=123456;Initial Catalog=onlineordering;convertzerodatetime=True;AutoEnlist=false;Charset=utf8;Connection Timeout=30;Allow User Variables=true",
     "IsAutoCloseConnection": true
   },
   "JwtSettings": {
