--- a/Vue/onlineordermanage/package.json
+++ b/Vue/onlineordermanage/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aspnet/signalr": "^1.1.4",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "vue": "^2.6.11",
