修改地区服务

--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
@@ -24,5 +24,13 @@
     "SourceImgRootPath": "/Images/Source/",
     //缩略图保存地址
     "ThumbnailImgRootPath": "/Images/Thumbnail/"
+  },
+  "DistrictSettings": {
+    "BaseUrl": "https://restapi.amap.com",
+    "DistrictUrl": "/v3/config/district?key=ba78f1716c8df021a67ded728c1eb651",
+    //0：中华人民共和国，1：省，2：省、市，3：省、市、区，4：省、市、区、乡镇/街道
+    "SubDistrict": 4,
+    //可选值：JSON，XML，默认JSON
+    "Output": "JSON"
   }
 }
