--- a/APIGenerator/pom.xml
+++ b/APIGenerator/pom.xml
@@ -21,6 +21,11 @@
             <version>1.0</version>
         </dependency>
         <dependency>
+            <groupId>org.pegdown</groupId>
+            <artifactId>pegdown</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+        <dependency>
             <groupId>ch.netzwerg</groupId>
             <artifactId>paleo-core</artifactId>
             <version>0.10.2</version>
