--- a/AspnetCore/OnlineOrdering/ZeroOne.Extension/ZeroOne.Extension.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.Extension/ZeroOne.Extension.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.1" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
