--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/ZeroOne.WebApi.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/ZeroOne.WebApi.csproj
@@ -33,7 +33,7 @@
     <PackageReference Include="NLog.Mongo" Version="4.6.0.68" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
     <PackageReference Include="NLog.WindowsIdentity" Version="4.6.8" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc5" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.1" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
