通过配置动态设置监听端口

--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/ZeroOne.WebApi.csproj
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/ZeroOne.WebApi.csproj
@@ -57,5 +57,7 @@
     <None Include="Data\District.json" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="http://json.schemastore.org/babelrc" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
