--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
@@ -6,6 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "server.urls": "http://*:668;",
   "AllowedHosts": "*",
   "ConnectionConfig": {
     /* 0:MySql,1:SqlServer,2:Sqlite,3:Oracle,4:PostgreSQL */
