提交socket通信测试项目

--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
@@ -33,5 +33,9 @@
     "SubDistrict": 4,
     //可选值：JSON，XML，默认JSON
     "Output": "JSON"
+  },
+  "RedisCacheOptions": {
+    "Configuration": "localhost",
+    "InstanceName": "RedisSession"
   }
 }
