添加定位服务代码

--- a/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
+++ b/AspnetCore/OnlineOrdering/ZeroOne.WebApi/appsettings.json
@@ -34,6 +34,10 @@
     //可选值：JSON，XML，默认JSON
     "Output": "JSON"
   },
+  "MapLocationSettings": {
+    "Key": "ba78f1716c8df021a67ded728c1eb651",
+    "Output": "JSON"
+  },
   "RedisCacheOptions": {
     "Configuration": "localhost",
     "InstanceName": "RedisSession"
